RESOLVED FIXED226081
[GStreamer] WebProcess crashes when certain elements are missing
https://bugs.webkit.org/show_bug.cgi?id=226081
Summary [GStreamer] WebProcess crashes when certain elements are missing
Adrian Perez
Reported 2021-05-21 06:55:50 PDT
Some GStreamer elements like “autoaudiosink” are expected to be available, and the media playback code does not check whether their instantiation succeeded before using pointers that can be null if those elements are not available for some reason. For example: Source/WebCore/platform/graphics/gstreamer/GStreamerAudioMixer.cpp:51 instantiates “autoaudiosink”, then adds it to a pipeline without doing any checks.
Attachments
Patch (36.38 KB, patch)
2021-05-21 08:00 PDT, Philippe Normand
no flags
Patch for landing (1.28 KB, patch)
2021-05-24 06:24 PDT, Michael Catanzaro
no flags
Adrian Perez
Comment 1 2021-05-21 06:59:11 PDT
We have had other similar situations in the past like bug #190469 (and probably more, I have not done an extensive search in Bugzilla).
Philippe Normand
Comment 2 2021-05-21 08:00:22 PDT
Adrian Perez
Comment 3 2021-05-24 04:21:46 PDT
(In reply to Philippe Normand from comment #2) > Created attachment 429288 [details] > Patch Neat \o/
EWS
Comment 4 2021-05-24 04:22:40 PDT
Committed r277947 (238074@main): <https://commits.webkit.org/238074@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 429288 [details].
Radar WebKit Bug Importer
Comment 5 2021-05-24 04:23:17 PDT
Michael Catanzaro
Comment 6 2021-05-24 06:24:53 PDT
Reopening to attach new patch.
Michael Catanzaro
Comment 7 2021-05-24 06:24:56 PDT
Created attachment 429528 [details] Patch for landing
Lauro Moura
Comment 8 2021-05-24 06:48:43 PDT
Note You need to log in before you can comment on or make changes to this bug.