[GStreamer] WebProcess crashes when certain elements are missing https://bugs.webkit.org/show_bug.cgi?id=226081 <rdar://problem/78394687>

Unreviewed LTS build fix.

* platform/audio/gstreamer/AudioSourceProviderGStreamer.cpp:

Canonical link: https://commits.webkit.org/238075@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277948 268f45cc-cd09-0410-ab3c-d52691b4dbfc